--- a/actividad-tp3/src/main/resources/application.properties
+++ b/actividad-tp3/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.application.name = Spring.io
 
+spring.datasource.url=jdbc:mysql://localhost:3307/tp3-POO
+spring.datasourse.username=root
+spring.datasource.password=root
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
